# fast-abtest

./: .gitignore  LICENSE  README.md  consistently_distribution.py  pyproject.toml
fast_abtest/: __init__.py  config.py  decorator.py  interface.py  metrics.py  registred_scenario.py  variant_selector.py
fast_abtest/exporter/: __init__.py  prometheus.py
fast_abtest/monitoring/: __init__.py  calls_counter.py  errors_counter.py  interface.py  latency.py  metrics.py  recorder.py
tests/: base.py  test_custom_metric.py  test_decorator.py  test_error_rate_threshold.py  test_fastapi_compatibility.py  test_prometheus_exporter.py
