[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fast-abtest"
version = "0.2.1"
description = "A fast and lightweight A/B testing library for Python."
authors = ["Evgenii Eliseev <evgeniieliseeve@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Gifourm/fast-abtest"
repository = "https://github.com/Gifourm/fast-abtest"
documentation = "https://github.com/Gifourm/fast-abtest#readme"
keywords = ["ab-testing", "statistics", "experiments", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "fast_abtest" }
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.22.1"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
mypy = "^1.0"
pytest-cov = "^4.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"

[mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]
